Style/style.css
:root {
  --pColor: #172b4d;
  --sColor: #36b37e;
}

html {
  scroll-behavior: smooth;
}

* {
  margin: 0;
  padding: 0;
  text-align: center;
  list-style: none;
  border: none;
}

main {
  padding-top: 2rem;
}

#mobilemenu {
  position: fixed;
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
}

#welcome {
  font-family: "Inter", sans-serif;
  font-weight: bold;
  letter-spacing: 1px;
  color: #28352f;
}

.menu {
  width: 1.125rem;
  height: 1.938rem;
  cursor: pointer;
}

.menu span {
  display: block;
  width: 100%;
  height: 2px;
  background: var(--pColor);
  margin-top: 6px;
  transform-origin: 0 100%;
  transition: all 300ms;
}

.menu.active .menu-bar1:nth-child(1) {
  transform: rotate(45deg) translate(-2px, 1px);
}

.menu.active .menu-bar2:nth-child(2) {
  opacity: 0;
  margin-left: -30px;
}

.menu.active .menu-bar3:nth-child(3) {
  transform: rotate(-45deg) translate(2px, -3px);
}

.nav-bar {
  position: fixed;
  display: flex;
  flex-direction: column;
  align-items: center;
  left: -100%;
  top: 0;
  background: #fff;
  min-width: 100vw;
  min-height: 100vh;
  text-align: center;
  transition: 0.3s;
}

.nav-list {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 20px 221px 0 0;
}

.nav-bar.active {
  left: 0;
}

.nav-item {
  transition: 0.7s ease;
  margin: 16px 0;
  font-family: "Inter", sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 32px;
  line-height: 44px;
  color: #3a4a42;
}

.nav-item:hover {
  color: var(--sColor);
}

#menudkt {
  display: none;
}

.a-header:link,
.a-header:visited {
  text-decoration: none;
}

.txt-menudkt:hover {
  color: var(--sColor);
  font-size: 1.5rem;
  transition: color 0.8s ease;
}

@media screen and (min-width: 768px) {
  #mobilemenu {
    display: none;
  }

  #menudkt {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
  }

  .menudkt-list {
    display: flex;
    align-items: center;
  }

  .txt-menudkt {
    margin: 1rem;
    font-family: "Inter", sans-serif;
    font-style: normal;
    font-weight: 600;
    font-size: 0.938rem;
    line-height: 1.25rem;
    color: #344563;
  }

  .media-icon {
    opacity: 0.5;
    transition: all 300ms ease-in-out;
  }

  .media-icon:hover {
    opacity: 1;
    transform: scale(1.1);
  }
}

#headline {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 4em 1.5em;
  gap: 58px;
  background-image: url("../Style/header-illsutration-mobile.svg");
  background-repeat: no-repeat;
  background-position: center;
}

.primary {
  font-family: "Inter", sans-serif;
  font-size: 2rem;
  padding: 0 0.75rem;
  color: var(--pColor);
  line-height: 2.666rem;
}

.secondary {
  color: var(--sColor);
}

.supportingtxt {
  width: 20.438rem;
  height: 10.25rem;
  font-family: "Inter", sans-serif;
  font-size: 1.25rem;
  line-height: 1.75rem;
  color: var(--pColor);
}

#social-media-icons {
  display: flex;
  align-items: center;
}

.media-icon {
  margin: 0.625em;
}

.arrow {
  border: 1px solid #dfe1e6;
  border-radius: 50%;
  width: 2.5rem;
  height: 2.5rem;
  display: flex;
  align-items: center;
  justify-content: center;
}

@media screen and (min-width: 768px) {
  #headline {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 10rem 0;
    gap: 1.5rem;
    background-image: url("../Style/Header-llustration-desktop.svg");
    background-repeat: no-repeat;
    background-position: center;
  }

  .primary {
    width: 57.5rem;
    height: 7.125rem;
    font-family: "Inter", sans-serif;
    font-style: normal;
    font-weight: 800;
    font-size: 3rem;
    line-height: 60px;
    text-align: center;
    letter-spacing: 0.023rem;
    color: #172b4d;
  }

  .supportingtxt {
    width: 56.8rem;
    height: 6rem;
    font-family: "Inter", sans-serif;
    font-style: normal;
    font-weight: 400;
    font-size: 1.43rem;
    line-height: 2rem;
    text-align: center;
    color: #172b4d;
  }

  #social-media-icons {
    display: flex;
    flex-direction: row;
    align-items: center;
    width: 12.5rem;
    height: 2.5rem;
  }

  .arrow {
    padding: 0.5rem;
    border: none;
  }
}

#recentworks {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 2.5rem 2rem;
  gap: 3rem;
}

.maintxt {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 24px;
  width: 20.438rem;
  height: 7.813rem;
}

.indicator {
  width: 3rem;
  height: 0.25rem;
  background: var(--sColor);
  border-radius: 24px;
}

#grid-boxs {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: repeat(6, 1fr);
  padding: 0.25em 0.125em;
  gap: 24px;
  width: 20.688rem;
  height: 185.75rem;
}

.project-box1 {
  display: flex;
  flex-direction: column-reverse;
  align-items: center;
  width: 20.438rem;
  height: 29.625rem;
  background: #ebf0ee;
  border: 1px solid #d0d9d4;
  border-radius: 8px;
  transition: transform 0.2s;
}

.project-box1:hover {
  border: 3px solid #36b37e;
  transition: border-color 1.5s ease;
  transform: scale(1.1);
}

.project-box2 {
  display: flex;
  flex-direction: column-reverse;
  align-items: center;
  width: 20.438rem;
  height: 29.625rem;
  background: #ebf0ee;
  border: 1px solid #d0d9d4;
  border-radius: 8px;
  transition: transform 0.2s;
}

.project-box2:hover {
  border: 3px solid #36b37e;
  transition: border-color 1.5s ease;
  transform: scale(1.1);
}

.project-box3 {
  display: flex;
  flex-direction: column-reverse;
  align-items: center;
  width: 20.438rem;
  height: 29.625rem;
  background: #ebf0ee;
  border: 1px solid #d0d9d4;
  border-radius: 8px;
  transition: transform 0.2s;
}

.project-box3:hover {
  border: 3px solid #36b37e;
  transition: border-color 1.5s ease;
  transform: scale(1.1);
}
/* ... */

